--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "start": "ng serve",
     "test": "ng test",
     "update": "ng update @bb-cli/schematics@^5 @backbase/foundation-ang@^6",
-    "create:json:experience": "sdlc extract ./experience/zoz/example.zip ./experience/json",
+    "create:json:experience": "sdlc extract ./experience/provisioning-package/example.zip ./experience/json",
     "create:docker:container": "sdlc package ./experience/json/experience.json --environment=docker",
-    "create:zoz:experience": "sdlc package ./experience/json/experience.json",
+    "create:provisioning-package:experience": "sdlc package ./experience/json/experience.json",
     "create:simplified:home": "sdlc convert-from ./experience/json/experience.json ./experience/json/pages/home.json --output=./apps/example/src/mocks/home.simplified.json --remove-defaults=false"
   },
   "private": true,
