--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "update": "ng update @bb-cli/schematics@^5 @backbase/foundation-ang@^6",
     "create:json:experience": "sdlc extract ./experience/provisioning-package/example.zip ./experience/json",
     "create:docker:container": "sdlc package ./experience/json/experience.json --environment=docker",
-    "create:provisioning-package:experience": "sdlc package ./experience/json/experience.json",
+    "create:provisioning-package": "sdlc package ./experience/json/experience.json",
     "create:home:page:mock": "sdlc convert-from ./experience/json/experience.json ./experience/json/pages/home.json --output=./apps/example/src/mocks/home.page.mock.json --remove-defaults=false"
   },
   "private": true,
