--- a/angular.json
+++ b/angular.json
@@ -40,8 +40,8 @@
         "build": {
           "builder": "@bb-cli/bb-ang:browser",
           "options": {
-            "i18nMissingTranslation": "error",
             "localize": true,
+            "i18nMissingTranslation": "error",
             "outputPath": "dist/example",
             "index": "apps/example/src/index.html",
             "main": "apps/example/src/main.ts",
@@ -62,6 +62,7 @@
           },
           "configurations": {
             "production": {
+              "localize": true,
               "fileReplacements": [
                 {
                   "replace": "apps/example/src/environments/environment.ts",
@@ -89,6 +90,7 @@
               ]
             },
             "shared": {
+              "localize": true,
               "fileReplacements": [
                 {
                   "replace": "apps/example/src/environments/environment.ts",
